# softhsmv3

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  constants.js
.github/workflows/: ci.yml
cmake/modules/: CompilerOptions.cmake
cmake/toolchain/: emscripten.cmake
docs/: gap-analysis-pkcs11-v3.2.md  howtotestsofthsmv3.md  softhsmv3devguide.md
rust/: Cargo.toml  fix_crypto.py  fix_literals.py  fix_state.py
rust/src/: constants.rs  ffi.rs  lib.rs  state.rs
rust/src/crypto/: handlers.rs
rust/tests/: pqc_api_test.rs
scripts/: build-openssl-wasm.sh  build-wasm.sh
src/lib/: CMakeLists.txt  P11Attributes.cpp  P11Attributes.h  P11Objects.cpp  P11Objects.h  SoftHSM.cpp  SoftHSM.h  SoftHSMHelpers.h  SoftHSM_cipher.cpp  SoftHSM_keygen.cpp  SoftHSM_sign.cpp  SoftHSM_slots.cpp  main.cpp
src/lib/crypto/: AsymmetricAlgorithm.h  CMakeLists.txt  MLKEMParameters.cpp  MLKEMParameters.h  MLKEMPrivateKey.cpp  MLKEMPrivateKey.h  MLKEMPublicKey.cpp  MLKEMPublicKey.h  MacAlgorithm.h  Makefile.am  OSSLCryptoFactory.cpp  OSSLCryptoFactory.h  OSSLECDSA.cpp  OSSLECPrivateKey.cpp  OSSLECPublicKey.h  OSSLEDPublicKey.h  OSSLKMAC.cpp  OSSLKMAC.h  OSSLMLDSA.cpp  OSSLMLKEM.cpp  OSSLMLKEM.h  OSSLMLKEMKeyPair.cpp  OSSLMLKEMKeyPair.h  OSSLMLKEMPrivateKey.cpp  OSSLMLKEMPrivateKey.h  OSSLMLKEMPublicKey.cpp  OSSLMLKEMPublicKey.h  OSSLUtil.cpp
src/lib/crypto/test/: CMakeLists.txt  HashTests.cpp  HashTests.h  MacTests.cpp  MacTests.h  RSATests.cpp
src/lib/data_mgr/: SecureDataManager.cpp  SecureDataManager.h
src/lib/data_mgr/test/: CMakeLists.txt
src/lib/handle_mgr/: CMakeLists.txt  HandleManager.cpp  HandleManager.h
src/lib/handle_mgr/test/: CMakeLists.txt
src/lib/object_store/test/: CMakeLists.txt
src/lib/pkcs11/: cryptoki.h  pkcs11t.h
src/lib/session_mgr/: Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
src/lib/session_mgr/test/: CMakeLists.txt  SessionManagerTests.cpp
src/lib/slot_mgr/test/: CMakeLists.txt
src/lib/test/: CMakeLists.txt  DeriveTests.cpp  DeriveTests.h  DigestTests.cpp  InfoTests.h  ObjectTests.cpp  SignVerifyTests.h  SymmetricAlgorithmTests.h
src/wasm/: softhsm_pre.js
tests/: smoke-wasm.mjs
