[package]
name = "softhsmrustv3"
version = "0.1.0"
edition = "2021"
description = "A native Rust WebAssembly clone of SoftHSMv3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console"] }

# Cryptography (Pure Rust replacements for OpenSSL/Botan)
getrandom = { version = "0.2.17", features = ["js"] }
rand = "0.8.5"
aes = "0.8.3"
aes-gcm = "0.10.3"
aes-kw = { version = "0.2", features = ["alloc"] }
cbc = "0.1.2"
ctr = "0.9.2"
ed25519-dalek = { version = "2.1", features = ["rand_core", "digest"] }
hmac = "0.12.1"
sp800-185 = "0.2.0"
pbkdf2 = "0.12"
hkdf = "0.12"
ml-dsa = { version = "=0.1.0-rc.7", features = ["pkcs8"] }
ml-kem = "0.2.3"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa", "ecdh"] }
pkcs8 = { version = "0.11.0-rc.11", features = ["alloc"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
signature = "3.0.0-rc.10"
slh-dsa = "=0.2.0-rc.4"
spki = { version = "0.8.0-rc.4", features = ["alloc"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
console_error_panic_hook = "0.1.7"
zeroize = "1"

[profile.release]
# Optimize purely for size in WASM
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
